# AITransVideo

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AIVideoTrans_Phase_A1_实施文档_给Codex.md  CLAUDE.md  CODEX_REVIEW_REPORT_2026-03-19.md  COMMERCIAL_READINESS_CHECKLIST.md  Caddyfile  DESIGN.md  Dockerfile  LINUX_DEPLOYMENT_BASELINE.md  LINUX_MIGRATION_SCOPE.md  PHASE_A_ACCEPTANCE_NOTE.md  PROCESS_WORKFLOW_CONVERGENCE.md  README.md  REAL_VIDEO_PROGRESS_ANALYSIS.md  REAL_VIDEO_REGRESSION_CHECKLIST.md  REFACTOR_PHASE1_SUMMARY.md  REMOTE_WORKBENCH_ACCEPTANCE_NOTE.md  REMOTE_WORKBENCH_DEPLOYMENT_PLAN.md  RESULT_ACCESS_MINIMAL_CONTRACT.md  VOICE_REVIEW_FLOW.md  WEB_SKILL_FUTURE_SURFACE.md  docker-compose.yml  encapsulated-growing-spark.md  main.py  pyproject.toml  requirements-dev.txt
.claude/: launch.json
.github/workflows/: ci.yml
baselines/: 2026-05-baseline.json
data/: minimax_only_seed.sql  minimax_seed.sql  traits_analysis.json
docs/: AIVideoTrans_Codex_执行版总文档_最终版.md  AIVideoTrans_前端页面清单与页面结构_v4.md  COMMERCIALIZATION_HANDOVER_2026-03-30.md  CURRENT_PROJECT_STATUS.md  FREE_VS_PAID_TTS_ROUTING_STATUS_AND_RECOVERY_PLAN.md  NEXT_EXECUTION_PRIORITY.md  POST_MEMBERSHIP_MINIMAL_REPAIR_CHECKLIST.md  QUICKSTART.md  fc-relay-captcha-verify-patch.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend-next/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
gateway/: Dockerfile  admin_auth.py  admin_billing_api.py  admin_cost_api.py  admin_cosyvoice_control_api.py  admin_disk_api.py  admin_job_monitor_api.py  admin_settings.py  admin_smart_analytics_api.py  admin_support_api.py  alembic.ini  anonymous_consent.py  anonymous_express_clone_consent.py  anonymous_lane.py  anonymous_preview_api.py  anonymous_preview_chunked_api.py  anonymous_preview_intake_wiring.py  anonymous_preview_limits.py  anonymous_preview_payload_spec.py  anonymous_preview_policy.py  anonymous_preview_prescreen.py  anonymous_preview_probe.py  anonymous_preview_quota.py  anonymous_preview_quota_refund.py  anonymous_preview_record_store.py  anonymous_preview_sweeper.py  anonymous_preview_upload.py  anonymous_session.py  audio_assembly.py  auth.py  auth_email.py  auth_phone.py  backfill_project_dir.py  background_task_api.py  background_task_executors.py  background_task_models.py  background_task_queue.py  background_task_reconciler.py  billing.py  billing_reconciliation.py  (+92 more)
scripts/: b2_calibration_sample_builder.py  b2_endpoint_audit.py  b2_gemini_voice_profiler.py  calibrate_zh_en_ratio.py  check_quality.ps1  check_quality.sh  cosyvoice_tts_helper.py  debug_cosyvoice_probe.py  dev_generate_jianying_draft_poc.py  linux_app_service.sh  linux_compose_preflight.sh  linux_container_entrypoint.sh  linux_remote_workbench_preflight.py  merge_labels_to_catalog.py  paddle_p0_verify.py  pan_backup_smoke.py  pg_backup.sh  phase1b_report_summary.py  phase2_artifact_survey.py  r2_observability.py  run_remote_workbench_service.py  sftp_over_socks_download.py  sftp_over_socks_upload.py  smart_shadow_eval_analyzer.py  smart_shadow_eval_collector.py  smart_shadow_sim_aggregator.py  smart_shadow_sim_simulator.py  ssh_over_socks_exec.py  start_remote_workbench.ps1  test_cosyvoice_speech_rate.py  test_minimax_english_voice.py  test_volcengine_explicit_language.py  test_volcengine_speech_rate.py  verify-gateway-deploy.sh  verify_deploy.sh  volcengine_batch_label.py  volcengine_voice_profiler.py
src/: __init__.py
tests/: conftest.py  job_test_helpers.py  pan_fixtures.py  test_admin_auth.py  test_admin_compliance_notify_only.py  test_admin_cosyvoice_control.py  test_admin_csrf_guard_wiring.py  test_admin_disk_api.py  test_admin_gate_coverage.py  test_admin_internal_key_headers.py  test_admin_pricing_page_copy.py  test_admin_project_dir_safety.py  test_admin_settings.py  test_admin_smart_analytics.py  test_admin_smart_analytics_voice_reuse.py  test_admin_users.py  test_alembic_007_downgrade_safe.py  test_alembic_017_unique_constraints.py  test_alembic_018_pricing_active_unique.py  test_alembic_019_phone_attempts.py  test_alembic_021_sessions_expires_at_index.py  test_alembic_026_email_auth.py  test_alembic_030_phase4_cosyvoice_clone.py  test_alembic_031_user_voice_temp_expiry.py  test_alembic_036_payment_order_reconcile.py  test_alembic_041_payment_order_reconcile.py  test_alembic_043_user_voice_compat_langs.py  test_aligner.py  test_aligner_concurrency.py  test_alignment.py  test_alipay_provider.py  test_announcement_for_new_registrations.py  test_announcement_popup.py  test_anon_clone_enable_t1_admin_sync_guard.py  test_anon_clone_enable_t2_security.py  test_anon_clone_enable_t2_v1_bypass.py  (+544 more)
(+1337 files in other folders)
