[project]
name = "aivideotrans"
version = "0.1.0"
description = "Video/audio localization pipeline — transcription, translation, TTS, alignment, editor output"
requires-python = ">=3.12,<3.13"
dependencies = [
    "assemblyai",
    "dashscope>=1.25.2",
    "google-genai",
    "pydub",
    "requests",
    "websocket-client",
    "yt-dlp[default]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    # Async SQLite driver used by gateway DB-backed unit tests
    # (tests/test_background_task_queue.py, tests/test_materials_pack_executor.py,
    # tests/test_background_task_api.py).
    "aiosqlite",
]
