[project]
name = "aivideotrans"
version = "0.1.0"
description = "Video/audio localization pipeline — transcription, translation, TTS, alignment, editor output"
requires-python = ">=3.12,<3.13"
dependencies = [
    "assemblyai",
    "dashscope>=1.25.2",
    "google-genai",
    "pydub",
    "requests",
    "cryptography",
    "websocket-client",
    "yt-dlp[default]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    # Async SQLite driver used by gateway DB-backed unit tests
    # (tests/test_background_task_queue.py, tests/test_materials_pack_executor.py,
    # tests/test_background_task_api.py).
    "aiosqlite",
]
# Phase D — optional Whisper subtitle alignment runtime dependency.
# Default deployments do NOT install this (faster-whisper + ctranslate2 +
# tokenizer add ~500 MB image weight). Enable per deployment via the app
# Dockerfile build arg ``INSTALL_WHISPER=1`` (which calls
# ``pip install .[whisper]``); compose example in docker-compose.yml.
# See docs/plans/2026-05-04-subtitle-audio-sync-plan.md "灰度启用 SOP".
whisper = [
    "faster-whisper==1.0.3",
]
