[project]
name = "aivideotrans"
version = "0.1.0"
description = "Video/audio localization pipeline — transcription, translation, TTS, alignment, editor output"
requires-python = ">=3.12,<3.13"
dependencies = [
    "assemblyai",
    "dashscope>=1.25.2",
    "google-genai",
    "pydub",
    "requests",
    "cryptography",
    "websocket-client",
    "yt-dlp[default]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    # Async SQLite driver used by gateway DB-backed unit tests
    # (tests/test_background_task_queue.py, tests/test_materials_pack_executor.py,
    # tests/test_background_task_api.py).
    "aiosqlite",
    # TU-03 quality scaffold (2026-06-25, report-only first week).
    # See docs/plans/code-quality-tasks/TU-03-quality-scaffold.md
    "ruff>=0.5.0",
    "mypy>=1.11",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.6",
]
# Phase D — optional Whisper subtitle alignment runtime dependency.
# Default deployments do NOT install this (faster-whisper + ctranslate2 +
# tokenizer add ~500 MB image weight). Enable per deployment via the app
# Dockerfile build arg ``INSTALL_WHISPER=1`` (which calls
# ``pip install .[whisper]``); compose example in docker-compose.yml.
# See docs/plans/2026-05-04-subtitle-audio-sync-plan.md "灰度启用 SOP".
whisper = [
    "faster-whisper==1.0.3",
]

# ---------------------------------------------------------------------------
# TU-03 quality scaffold — report-only / changed-files first week.
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501", "E402", "E711", "E712", "F401"]

[tool.ruff.lint.per-file-ignores]
"gateway/alembic/versions/*.py" = ["E501", "I001", "F401"]
"tests/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["src", "gateway", "core", "services", "utils"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["gateway/alembic/", "\\.codex_worktrees/", "\\.claude/", "\\.codex_tmp/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# 默认排除 slow / real_provider / benchmark（§10.4 + DoD）：这些 mark 的语义本就是
# 「默认不跑」。当前三类 mark 标注 0 个测试，故 collection 不变（实测 8687）；
# 需要时显式 -m 覆盖（如 full-suite job 的 inline -m 追加 postgres）。
addopts = "-p no:cacheprovider -m 'not slow and not real_provider and not benchmark'"
markers = [
    "unit: 纯函数/小模块",
    "contract: API/schema/status/path parity 契约",
    "guard: 架构守卫，禁止回退",
    "integration: 跨进程/外部依赖集成测试",
    "postgres: 需要真实 PostgreSQL（CI 单独 job）",
    "timeout: per-test 超时（需 pytest-timeout）",
    "slow: 长耗时",
    "real_provider: 真实外部服务，默认禁止",
    "benchmark: 性能基准，不作普通 pass/fail",
]
